# Openpyxlwings

./: .gitignore  LICENSE  README.md  pyproject.toml
samples/: extraction_format.xlsx  extraction_input.xlsx  openpyxlwings_sample.xlsx
scripts/: create_sample_workbook.py
src/openpyxlwings/: __init__.py  border_table.py  cli.py  exceptions.py  format.py  plan.py  reader.py  selected_columns.py  workbook.py  writer.py
tests/: test_api.py  test_border_table.py  test_format.py  test_plan.py  test_plan_excel.py  test_reader.py  test_selected_columns.py
