[project]
name = "openpyxlwings"
version = "0.1.0"
description = "Fast Excel reads with openpyxl and safer writes through xlwings."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Openpyxlwings contributors" },
]
keywords = ["excel", "openpyxl", "xlwings", "xlsx", "xlsm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "openpyxl>=3.1.0",
    "xlwings>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/your-org/openpyxlwings"
Repository = "https://github.com/your-org/openpyxlwings"

[project.scripts]
openpyxlwings = "openpyxlwings.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openpyxlwings"]

[tool.hatch.build]
exclude = [
    "samples/~$*.xlsx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "excel: tests that drive a real Excel install via xlwings (auto-skipped when Excel is unavailable).",
]

